@@ -1,3 +1,6 @@
+5/26/2024
+	Implemented slingshot clues, added test case.
+
 5/24/2024
 	Added support for Regionometers, including test case.
 	Updated parity quad code to allow different numbers of disallowed odd/evens per 2x2 quad. Added test case.
